# ModelGLTest

./: a.sh  platform.hpp
F1/Example45/: CMakeCache.txt  Makefile  cmake_install.cmake
LearningOpenGL/: CMakeLists.txt  Shader.cpp  Shader.h  basic.frag  basic.vert  draw.cpp  draw.h  global.h  glutils.cpp  glutils.h  light.cpp  light.h  main.cpp  main.h  system.cpp  system.h  textfile.cpp  textfile.h  toon.frag  toon.vert  utility.cpp  utility.h  vbomesh.cpp  vbomesh.h  vboplane.cpp  vboplane.h  vboteapot.cpp  vboteapot.h  vbotorus.cpp  vbotorus.h
Opengl3-Terrain-master/Opengl3-Terrain-master/: OpenGL3.sln
Opengl3-Terrain-master/Opengl3-Terrain-master/OpenGL3/: Object.cpp  Object.h  OpenGL3.vcxproj  OpenGL3.vcxproj.filters  Terrain.cpp  Terrain.h  camera.cpp  camera.h  fragment.glsl  fragment_sunlight.glsl  loaders.cpp  loaders.h  main.cpp  objloader.cpp  objloader.h  texture.dds  vboindexer.cpp  vboindexer.h  vertex.glsl  vertex_sunlight.glsl
shader_school/: package.json
source/: mk.sh
source/01_project_skeleton/source/: main  mk.sh
source/02_textures/source/: main
source/03_matrices/source/: main
source/04_camera/source/: main
source/05_asset_instance/source/: main
source/06_diffuse_lighting/source/: main  main.cpp
source/07_more_lighting/source/: main
source/08_even_more_lighting/source/: main  main.cpp
